# akkizon

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/core/adapter/: __init__.py  base_client.py  deepseek_client.py
app/modules/data_processor/: __init__.py  dependencies.py  handlers.py  routers.py  schemas.py  services.py
core/: config.py  constants.py  logger.py
core/adapter/: openai_client.py
modules/authentication/: __init__.py  base.py  clients.py  handlers.py  helpers.py  routers.py  schemas.py
modules/data_processor/: __init__.py  clients.py  handlers.py  helpers.py  models.py  routers.py  scenarios.py  schemas.py  services.py
modules/etl/: __init__.py  extract.py  factory.py  load.py  main.py  transform.py
modules/integration/: __init__.py  clients.py  dependencies.py  routers.py  schemas.py
modules/integration/routes/: __init__.py  hubspot.py
modules/projects/: __init__.py  clients.py  dependencies.py  routers.py  schemas.py
utils/: helper_funcs.py
